<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.padaiyal.libs</groupId>
  <artifactId>vaidhiyar</artifactId>
  <version>2023.12.11</version>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>9</source>
          <target>9</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <parent>
    <groupId>io.github.padaiyal</groupId>
    <artifactId>popper</artifactId>
    <version>2023.02.19</version>
  </parent>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>jVaidhiyar MVN package deployment</name>
      <url>https://maven.pkg.github.com/padaiyal/jMonocle</url>
    </repository>
  </distributionManagement>

  <properties>
    <dependency.mockito.version>4.11.0</dependency.mockito.version>
    <dependency.gson.version>2.10.1</dependency.gson.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.github.padaiyal.libs</groupId>
      <artifactId>properties</artifactId>
      <version>2023.12.11</version>
    </dependency>
    <dependency>
      <groupId>io.github.padaiyal.libs</groupId>
      <artifactId>i18n</artifactId>
      <version>2023.12.11</version>
    </dependency>
    <dependency>
      <groupId>io.github.padaiyal.libs</groupId>
      <artifactId>unittestextras</artifactId>
      <version>2023.12.11</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${dependency.mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>${dependency.mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${dependency.gson.version}</version>
    </dependency>
  </dependencies>

</project>
